--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ body {
     background-image: url(../images/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 910px;
+    height: 100vh;
 }
 .header {
     display: flex;
