change font-family of main title

--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,7 @@ body {
     font-size: var(--font1);
     line-height: 120px;
     margin-bottom: 10px;
+    font-family: 'merriweather';
 }
 .hero__subtitle {
     line-height: 40px;
