--- a/css/styles.css
+++ b/css/styles.css
@@ -195,6 +195,24 @@ body {
     background: var(--color-dark-gold);
     transition: width ease-in-out .5s;
 }
+.nav_active {
+    display: block;
+    overflow: hidden;
+    position: absolute;
+    background-color: var(--color-black);
+    width: 100%;
+    z-index: 9998;
+    right: -28px;
+    max-width: 620px;
+    top: 0;
+    height: 100vh;
+    padding: 134px 0 0 127px;
+    font-size: 35px;
+}
+.nav__list_active {
+    flex-direction: column;
+    align-items: flex-start;
+}
 .languages {
     font-size: var(--font5);
 }
@@ -225,6 +243,7 @@ body {
     width: 50px;
     height: 50px;
     cursor: pointer;
+    z-index: 9999;
 }
 .burger__line {
     display: block;
@@ -241,6 +260,17 @@ body {
 }
 .burger__line:nth-child(3) {
     top: 38px;
+}
+.burger_active .burger__line:nth-child(2) {
+    display: none;
+}
+.burger_active .burger__line:nth-child(1) {
+    top: 20px;
+    transform: rotate(45deg);
+}
+.burger_active .burger__line:nth-child(3) {
+    top: 20px;
+    transform: rotate(-45deg);
 }
 
 /* Skills styles */
