--- a/css/styles.css
+++ b/css/styles.css
@@ -55,9 +55,7 @@ html {
 }
 body {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    overflow-x: hidden;
     background-color: var(--color-black);
     color: var(--color-white);
     font-size: var(--font6);
@@ -195,24 +193,6 @@ body {
     background: var(--color-dark-gold);
     transition: width ease-in-out .5s;
 }
-.nav_active {
-    display: block;
-    overflow: hidden;
-    position: absolute;
-    background-color: var(--color-black);
-    width: 100%;
-    z-index: 9998;
-    right: -28px;
-    max-width: 620px;
-    top: 0;
-    height: 100vh;
-    padding: 134px 0 0 127px;
-    font-size: 35px;
-}
-.nav__list_active {
-    flex-direction: column;
-    align-items: flex-start;
-}
 .languages {
     font-size: var(--font5);
 }
@@ -251,6 +231,7 @@ body {
     width: 100%;
     height: 2px;
     background-color: var(--color-white);
+    transition: all 0.3s ease-in-out;
 }
 .burger__line:nth-child(1) {
     top: 14px;
@@ -260,6 +241,9 @@ body {
 }
 .burger__line:nth-child(3) {
     top: 38px;
+}
+.burger_active {
+    position: fixed;
 }
 .burger_active .burger__line:nth-child(2) {
     display: none;
@@ -602,13 +586,33 @@ body {
         padding-left: 0;
     }
     .nav {
-        display: none;
+        position: fixed;
+        background-color: var(--color-black);
+        width: 100%;
+        max-width: 480px;
+        height: 100%;
+        padding: 90px 0 0 70px;
+        font-size: 35px;
+        margin-right: 0;
+        top: 0;
+        right: 0;
+        z-index: 9996;
+        transform: translate(800px);
+        transition: transform .5s linear;
+    }
+    .nav_active {
+        transform: translate(0);
     }
     .burger {
         display: block;
+        position: fixed;
+    }
+    .nav__list {
+        flex-direction: column;
+        align-items: flex-start;
     }
     .languages {
-        margin-right: 20px;
+        margin-right: 80px;
     }
     .hero__title {
         font-size: var(--font7);
@@ -719,6 +723,10 @@ body {
     }
     .contacts {
         min-height: 500px;
+    }
+    .nav {
+        width: 100%;
+        padding: 100px 0 0 50px;
     }
 }
 @media (max-width: 420px) {
