add popups and scripts for them

--- a/css/styles.css
+++ b/css/styles.css
@@ -595,6 +595,10 @@ body {
     margin-bottom: 40px;
     text-align: left;
 }
+.contact__title_popup {
+    margin-bottom: 10px;
+    text-align: center;
+}
 .form {
     display: flex;
     flex-direction: column;
@@ -747,6 +751,9 @@ body {
 .light .theme-image {
     background-image: url(../images/svg/moon.svg);
 }
+.light .popup__overlay {
+    background-color: rgb(216 216 216 / 95%);
+}
 
 /* Up button styles */
 .up {
@@ -760,7 +767,7 @@ body {
     height: 50px;
     border-radius: 50%;
     border: 2px solid var(--color-dark-gold);
-    transition: all .3s linear;
+    transition: display .3s linear;
 }
 .up:hover {
     transform: scale(.9);
@@ -770,6 +777,66 @@ body {
     fill: #b3994b;
     width: 30px;
     height: 30px;
+}
+
+/* Popup styles */
+.popup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+    transition: all .3s linear;
+}
+.popup__overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;    
+    background-color: rgb(0 0 0 / 95%);
+}
+.popup__close {
+    position: absolute;
+    right: -15px;
+    top: -15px;
+    width: 30px;
+    height: 30px;
+    background-image: url(../images/svg/cross.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-color: var(--color-black);
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all .3s linear;
+}
+.popup__close:hover {
+    filter: invert(75%) sepia(33%) saturate(648%) hue-rotate(7deg) brightness(93%)
+    contrast(48%);
+}
+.popup__inner {
+    position: relative;
+    width: 600px;
+    max-width: 90%;
+    padding: 50px;
+    border: 2px solid var(--color-gold);
+    z-index: 9999;
+}
+.popup__title {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: var(--font2);
+    color: var(--color-dark-gold);
+    font-family: 'merriweather';
 }
 
 /* MEDIA QUERIES */
