--- a/css/styles.css
+++ b/css/styles.css
@@ -767,7 +767,7 @@ body {
     height: 50px;
     border-radius: 50%;
     border: 2px solid var(--color-dark-gold);
-    transition: display .3s linear;
+    transition: all .3s linear;
 }
 .up:hover {
     transform: scale(.9);
@@ -1079,6 +1079,9 @@ body {
     .timers {
         left: 9px;
     }
+    .popup__inner {
+        padding: 20px;
+    }
 }
 @media (max-width: 480px) {
     .hero {
@@ -1096,12 +1099,18 @@ body {
     .light .contact__title {
         color: var(--color-gold);
     }
+    .light .contact__title_popup {
+        color: var(--color-white);
+    }
     .nav {
         width: 100%;
         padding: 100px 0 0 50px;
     }
     .volume {
         width: 120px;
+    }
+    .up {
+        right: 17px;
     }
 }
 @media (max-width: 420px) {
@@ -1163,6 +1172,9 @@ body {
     .volume-icon {
         right: 165px;
         top: 13px;
+    }
+    .popup__title {
+        font-size: var(--font3);
     }
 }
 @media (max-width: 360px) {
